--- a/ATRIUM .html
+++ b/ATRIUM .html
@@ -105,7 +105,7 @@
                                                         <div style="float: left;padding-top: 0.7em;">
                                                         Ingresar con </div>
                                                         <div style="float: right;">
-                                                            <img src="./ATRIUM _files/logom.png" style="width: 60px;padding-top: 0.7em;">
+                                                            <img src="./ATRIUM _files/logom.png" style="width: 60px;padding-top: 0.7em;" alt="logom">
                                                         </div>
                                                         </a>
                                                 </div>
